fixed footer spacing

--- a/src/styles/1-base/2-general.css
+++ b/src/styles/1-base/2-general.css
@@ -128,9 +128,8 @@ p {
 /* Footer */
 
 footer {
-   height: 15vh;
    background-color: var(--white);
-   padding-top: 5rem;
+   padding: 5rem 0 1rem;
 }
 
 .socials__item {
